# hexa-octarina-conquer

./: .dockerignore  .env.example  .gitignore  Dockerfile  README-WEB-DEPLOY.txt  README.md  compose.yaml  pyproject.toml  render.yaml
.github/workflows/: android-hotfix-debug.yml  apply-first-play-ux.yml  apply-waiting-room-hotfix.yml  campaign.yml  cluster-debug.yml  hotfix-workflow-probe.yml  sprint11-debug.yml  tests.yml  web-client.yml
client/godot/: export_presets.cfg  project.godot
client/web/: .env.example  README.md  index.html  package.json  tsconfig.app.json  (+1 more)
conformance/: python_runner.py  scenarios.json
docs/: .hotfix-placeholder  Hexa Octarina Conquer - GDD - Jogo.md  account-protocol-v1.md  architecture.md  competitive-protocol-v1.md  deploy-web-mobile-render.md  development-log.md  protocol-v1.md  render-blueprint-reference.md  roadmap.md  sprint-04-core-tatico.md  sprint-05-protocolo-autoritativo.md  sprint-06-paridade-persistencia-arena3d.md  sprint-07-cartas-combate-sqlite-deploy.md  sprint-08-identidade-ranking-postgres-android.md  sprint-09-distribuicao-matchmaking-temporadas.md  sprint-10-cluster-presenca-governanca.md  sprint-11-reconnect-spectator-replay.md  sprint-12-web-pwa-mobile.md  sprint-13-deploy-web-mobile.md  sprint-14-single-player-campaign.md  video-test-2026-07-20.md
scripts/: INSTALAR-ANDROID-WINDOWS.cmd  export-android.sh  install-godot-android-template.sh  validate-android-apk.py  validate-render-blueprint.mjs
server/: package.json
tests/: test_cli.py  test_combat.py  test_game_engine.py  test_godot_assets.py
(+124 files in other folders)
