[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hexa-octarina-conquer"
version = "0.1.0"
description = "Prototype for a hybrid tactical board/card game inspired by Go, Dots and Boxes, and fantasy RPG progression."
requires-python = ">=3.10"
readme = "README.md"
authors = [{ name = "Projeto Hexa Octarina Conquer" }]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
