[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hexa-octarina-conquer"
version = "0.2.0"
description = "Authoritative reference engine for a hybrid tactical game inspired by Go, Dots and Boxes, TCG combat, and fantasy era progression."
requires-python = ">=3.10"
readme = "README.md"
authors = [{ name = "Tehkné Solutions" }]

[project.scripts]
hexa-octarina = "hexa_octarina_conquer.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
